deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tarchimb-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tarchimb-api
  template:
    metadata:
      labels:
        app: tarchimb-api
    spec:
      containers:
      - image: wil42/playground:v2
        name: tarchimb-api
