service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tarchimb-api-service
spec:
  ports:
  - port: 80
    targetPort: 8888
  selector:
    app: tarchimb-api
